# PV-Core

./: .env.example  .gitignore  LICENSE  README.md  blueprint.md  pyproject.toml
.github/workflows/: ci.yml
bitgn-ecom1/: ACCOUNTID_pvcore-witness-geometry-agent.md  submission-readiness.yaml
docs/: architecture.md  bitgn-runbook.md  insight.md  open-problems.md  publication-checklist.md
docs/research/awfs/: 2026-06-04-bc-lift-moduli.md
examples/ecom/: refund-task-duplicate.json  refund-task.json  run_refund.py
pvcore/: __init__.py  obligations.py  pipeline.py  types.py  verifiers.py
tests/: test_ecom_refund.py
