[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pvcore"
version = "0.1.0"
description = "Proof-carrying reasoning via witness geometry."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = []
keywords = [
  "proof-carrying",
  "agents",
  "verification",
  "witnesses",
  "e-commerce",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.setuptools.packages.find]
include = ["pvcore*"]
